gem_make.out
/home/awin/.rbenv/versions/1.9.3-p551/bin/ruby extconf.rb
cd src/ && /usr/lib/i386-linux-gnu/qt4/bin/qmake /home/awin/.rbenv/versions/1.9.3-p551/gemsets/tappy/gems/capybara-webkit-0.13.0/src/webkit_server.pro -spec /usr/share/qt4/mkspecs/linux-g++ -o Makefile.webkit_server
cd src/ && make -f Makefile.webkit_server 
make[1]: Entering directory `/home/awin/.rbenv/versions/1.9.3-p551/gemsets/tappy/gems/capybara-webkit-0.13.0/src'
g++ -c -pipe -O2 -Wall -W -D_REENTRANT -DQT_NO_DEBUG -DQT_WEBKIT_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtWebKit -I/usr/include/qt4 -I. -o EnableLogging.o EnableLogging.cpp
g++ -c -pipe -O2 -Wall -W -D_REENTRANT -DQT_NO_DEBUG -DQT_WEBKIT_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtWebKit -I/usr/include/qt4 -I. -o Authenticate.o Authenticate.cpp
In file included from Authenticate.cpp:2:0:
WebPage.h:42:17: error: incomplete type ‘QNetworkReply’ used in nested name specifier
     const QList<QNetworkReply::RawHeaderPair> &pageHeaders();
                 ^
WebPage.h:42:17: error: incomplete type ‘QNetworkReply’ used in nested name specifier
WebPage.h:42:45: error: template argument 1 is invalid
     const QList<QNetworkReply::RawHeaderPair> &pageHeaders();
                                             ^
make[1]: *** [Authenticate.o] Error 1
make[1]: Leaving directory `/home/awin/.rbenv/versions/1.9.3-p551/gemsets/tappy/gems/capybara-webkit-0.13.0/src'
make: *** [sub-src-webkit_server-pro-make_default-ordered] Error 2
Command 'make' failed

make
cd src/ && make -f Makefile.webkit_server 
make[1]: Entering directory `/home/awin/.rbenv/versions/1.9.3-p551/gemsets/tappy/gems/capybara-webkit-0.13.0/src'
g++ -c -pipe -O2 -Wall -W -D_REENTRANT -DQT_NO_DEBUG -DQT_WEBKIT_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtWebKit -I/usr/include/qt4 -I. -o Authenticate.o Authenticate.cpp
In file included from Authenticate.cpp:2:0:
WebPage.h:42:17: error: incomplete type ‘QNetworkReply’ used in nested name specifier
     const QList<QNetworkReply::RawHeaderPair> &pageHeaders();
                 ^
WebPage.h:42:17: error: incomplete type ‘QNetworkReply’ used in nested name specifier
WebPage.h:42:45: error: template argument 1 is invalid
     const QList<QNetworkReply::RawHeaderPair> &pageHeaders();
                                             ^
make[1]: *** [Authenticate.o] Error 1
make[1]: Leaving directory `/home/awin/.rbenv/versions/1.9.3-p551/gemsets/tappy/gems/capybara-webkit-0.13.0/src'
make: *** [sub-src-webkit_server-pro-make_default-ordered] Error 2
